--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,14 @@
 
+
+
+
+body, html {
+  height: 100%;
+  padding:0px;
+  margin:0px;
+}
+
+
 #canvas-basic {
     position: absolute;
     display: block;
@@ -10,6 +20,7 @@
     left: 0;
 }
 
+#gui { position: absolute; top: 2px; left: 2px }
 
 #wrapper {
    background-color: #fff;
@@ -31,6 +42,14 @@
   filter: blur(0px);
 
 }
+
+#full {
+  height: 100%;
+  width:100%;
+  background-color: #fff;
+}
+
+
 
 .padMe {
 
